--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,28 @@
-<h2>パスワードの変更</h2>
+<div class="container-login">
+  <h1><%= t('.change_your_password') %></h1>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <%= bootstrap_devise_error_messages! %>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :password, t('.new_password') %>
+      <%= f.password_field :password, autofocus: true, class: 'form-control'  %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <% if @minimum_password_length %>
+        <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
+      <% end %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "パスワードの変更" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.label :password_confirmation, t('.confirm_new_password') %>
+      <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'  %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="form-group">
+      <%= f.submit t('.change_my_password'), class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+
+  <%= render 'devise/shared/links' %>
+</div>
