--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,23 @@
-<h1>ようこそ</h1>
-<p>トップページです。</p>
-zizynonno,SendGrid
+<div class="home">
+  <% if user_signed_in? %>
+    <div class="outline">
+      <p>
+        IT技術の動画・画像・スライド。あらゆるイメージをPlathothで一元化！<br >
+      </p>
+    </div>
+  <% else %>
+    <h1 class="app-title">The-View</h1>
+
+  <div class="outline">
+    <p>
+      IT技術の動画・画像・スライド。あらゆるイメージをPlathothで一元化！<br >
+    </p>
+  </div>
+
+    <div class="topbtn-block">
+      <%= link_to 'サインアップ', new_user_registration_path %>
+      <%= link_to 'ログイン', new_user_session_path %>
+      <%# <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: "topbtn" %> %>
+    </div>
+  <% end %>
+</div>
