--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,5 +1,5 @@
-<div class="card" >
-  <img class="card-img-top" src="<%= content.media.url if content.media? %>" alt="Card image cap">
+<div class="card my-3" >
+  <img class="card-img-top bd-placeholder-img" src="<%= content.media.url if content.media? %>" alt="Card image cap">
   <div class="card-body">
     <h3 class="card-title"><%= link_to content.title, "#" %></h3>
     <p class="card-text">概要だよ！恐らく一覧には必要ないけどとりあえず入れてる</p>
