--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,7 +1,9 @@
 <div class="card my-3" >
-  <img class="card-img-top bd-placeholder-img" src="<%= content.media.url if content.media? %>" alt="Card image cap">
+  <div class="card-img-top bd-placeholder-img" >
+    <%= image_tag(content.media.url) %>
+  </div>
   <div class="card-body">
-    <h3 class="card-title"><%= link_to content.title, "#" %></h3>
+    <h3 class="card-title"><%= link_to content.title, content %></h3>
     <p class="card-text">概要だよ！恐らく一覧には必要ないけどとりあえず入れてる</p>
     <a href="#" class="btn btn-primary">詳細を見る</a>
   </div>
