add: content new create

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -91,3 +91,12 @@ textarea {
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
+
+/* upload */
+
+span.media {
+  margin-top: 10px;
+  input {
+    border: 0;
+  }
+}
