add: bootstrap molding

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,7 @@
 
 body {
   padding-top: 60px;
+  background-color: rgba(230, 230, 230, 0.445);
 }
 
 section {
@@ -23,7 +24,15 @@ textarea {
   margin-bottom: 10px;
 }
 
+h1 {
+  text-align: center;
+}
+
 /* header */
+
+header.navbar {
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
+}
 
 #logo {
   float: left;
@@ -99,4 +108,14 @@ span.media {
   input {
     border: 0;
   }
+}
+
+.img-responsive {
+  width: 100%;
+}
+
+/* content */
+p.content_info {
+  border-bottom: 1px solid lightgray;
+  padding: 10px 0px 10px 0px;
 }
