--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,16 +1,19 @@
-<%= form_for(@content) do |f| %>
+<h1>メディア投稿</h1>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title, placeholder: "タイトルを入力" %>
-  </div>
-  <div class="field">
-    <%= f.label :summary %>
-    <%= f.text_area :summary, placeholder: "概要欄を入力" %>
-  </div>
-  <span class="media">
-    <%= f.file_field :media %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@content) do |f| %>
 
-    <%= f.submit "Post", class: "btn btn-primary" %>
-  </span>
-<% end %>
+      <%= f.label :title %>
+      <%= f.text_field :title, placeholder: "タイトルを入力", class: 'form-control' %>
+
+      <%= f.label :summary %>
+      <%= f.text_area :summary,  placeholder: "概要欄を入力", class: 'form-control' %>
+
+      <%= f.label :media %>
+      <%= f.file_field :media, class: 'form-control' %>
+
+      <%= f.submit "投稿する", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
